--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-mountain-sun"></span>
+							<i class="fa-solid fa-mountain-sun"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
