--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href=""></a></li>
-								<li><a href="#aboutme">About Me</a></li>
+								<li><a href="#aboutme"></a>About Me</li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href=""></a></li>
+								<li><a href="#resume">Resume</a></li>
+								<li><a href="#contact"></a>Contact</li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -39,8 +39,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
+						<!-- About Me -->
+							<article id="aboutme">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
