--- a/index.html
+++ b/index.html
@@ -48,10 +48,37 @@
 
 						<!-- Projects -->
 							<article id="projects">
-								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<ul class="honeycomb" lang="es">
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1">
+								    <div class="honeycomb-cell__title">Diseño exclusivo</div>
+								  </li>
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2">
+								    <div class="honeycomb-cell__title">Impermeables</div>
+								  </li>
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
+								    <div class="honeycomb-cell__title">Tablero doble cara</div>
+								  </li>
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
+								    <div class="honeycomb-cell__title">Maletín de empaque</div>
+								  </li>
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
+								    <div class="honeycomb-cell__title">Antireflectivo<small>No vidrio</small></div>
+								  </li>
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
+								    <div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
+								  </li>
+								  <li class="honeycomb-cell">
+								    <img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
+								    <div class="honeycomb-cell__title">Tablero magnético</div>
+								  </li>
+								  <li class="honeycomb-cell honeycomb__placeholder"></li>
+								</ul>
 							</article>
 
 						<!-- About -->
