--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<nav>
 							<ul>
 								<li><a href="#aboutme">About Me</a></li>
-								<li><a href="#projects">Projects</a></li>
-								<li><a href="#resume">Resume</a></li>
+								<li><a href="#projects">Projects  </a></li>
+								<li><a href="#resume">Resume  </a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -51,11 +51,31 @@
 								<ul class="honeycomb" lang="es">
 									<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1">
-								    		<div class="honeycomb-cell__title">Diseño exclusivo</div>
+								    		<div class="honeycomb-cell__title">Side Blotched Lizards<small>An exploration into evolutionary game theory using time series models.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2">
-								    		<div class="honeycomb-cell__title">Impermeables</div>
+								    		<div class="honeycomb-cell__title">Placeholder Project #2<small>Insert Description Here</small></div>
+								  	</li>
+								  	<li class="honeycomb-cell">
+								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
+								    		<div class="honeycomb-cell__title">Placeholder Project #3<small>Insert Description Here</small></div>
+								  	
+									<li class="honeycomb-cell">
+								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
+								    		<div class="honeycomb-cell__title">Airline Safety<small>A visual analysis of airline safety statistics.</small></div>
+								  	</li>
+								  	<li class="honeycomb-cell">
+								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
+								    		<div class="honeycomb-cell__title">Untappd Beer Data<small>Exploratory data analysis using clustering and classification models.</small></div>
+								  	</li>
+								  	<li class="honeycomb-cell">
+								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
+								    		<div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
+								  	</li>
+								  	<li class="honeycomb-cell">
+								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
+								    		<div class="honeycomb-cell__title">Tablero magnético</div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
