--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-								    		<div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
+								    		<div class="honeycomb-cell__title">How to Win Big Brother<small>A statistical analysis on what makes a winner using regression analysis.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-								    		<div class="honeycomb-cell__title">Tablero magnético</div>
+								    		<div class="honeycomb-cell__title">Disney Film & Song Popularity<small>Analyzing popularity of films vs. their songs. Using Spotify API data & SQL.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
-								    		<div class="honeycomb-cell__title">Tablero doble cara</div>
+								    		<div class="honeycomb-cell__title">Movie Recommender System<small>Insert description here.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-								    		<div class="honeycomb-cell__title">Maletín de empaque</div>
+								    		<div class="honeycomb-cell__title">US Retail Sales<small>Total sales over the years using time series analysis.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-								    		<div class="honeycomb-cell__title">Antireflectivo<small>No vidrio</small></div>
+								    		<div class="honeycomb-cell__title">Wine Quality<small>Discovering makes a good red wine using regression analysis.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-								    		<div class="honeycomb-cell__title">6 fichas<small>1 de repuesto</small></div>
+								    		<div class="honeycomb-cell__title">Museum Artifacts<small>A visual analysis.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-								    		<div class="honeycomb-cell__title">Tablero magnético</div>
+								    		<div class="honeycomb-cell__title">Dodgers Game Attendance<small>Insert description here.</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell honeycomb__placeholder"></li>
 								</ul>
