--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<ul class="honeycomb" lang="es">
 									<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1">
-								    		<div class="honeycomb-cell__title">Side Blotched Lizards<small>An exploration into evolutionary game theory using time series models.</small></div>
+								    		<div class="honeycomb-cell__title">Side Blotched Lizards<small>Time Series Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2">
@@ -63,19 +63,19 @@
 								  	
 									<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-								    		<div class="honeycomb-cell__title">Airline Safety<small>A visual analysis of airline safety statistics.</small></div>
+								    		<div class="honeycomb-cell__title">Airline Safety<small>Visual Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-								    		<div class="honeycomb-cell__title">Untappd Beer Data<small>Exploratory data analysis using clustering and classification models.</small></div>
+								    		<div class="honeycomb-cell__title">Untappd Beer Data<small>Clustering & Classification Models</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-								    		<div class="honeycomb-cell__title">How to Win Big Brother<small>A statistical analysis on what makes a winner using regression analysis.</small></div>
+								    		<div class="honeycomb-cell__title">How to Win Big Brother<small>Regression Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-								    		<div class="honeycomb-cell__title">Disney Film & Song Popularity<small>Analyzing popularity of films vs. their songs. Using Spotify API data & SQL.</small></div>
+								    		<div class="honeycomb-cell__title">Disney Film & Song Popularity<small>API data & SQL</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
@@ -83,19 +83,19 @@
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-								    		<div class="honeycomb-cell__title">US Retail Sales<small>Total sales over the years using time series analysis.</small></div>
+								    		<div class="honeycomb-cell__title">US Retail Sales<small>Time Series Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-								    		<div class="honeycomb-cell__title">Wine Quality<small>Discovering makes a good red wine using regression analysis.</small></div>
+								    		<div class="honeycomb-cell__title">Wine Quality<small>Regression Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-								    		<div class="honeycomb-cell__title">Museum Artifacts<small>A visual analysis.</small></div>
+								    		<div class="honeycomb-cell__title">Museum Artifacts<small>Visual Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell">
 								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-								    		<div class="honeycomb-cell__title">Dodgers Game Attendance<small>Insert description here.</small></div>
+								    		<div class="honeycomb-cell__title">Dodgers Game Attendance<small>Regression Analysis</small></div>
 								  	</li>
 								  	<li class="honeycomb-cell honeycomb__placeholder"></li>
 								</ul>
