--- a/index.html
+++ b/index.html
@@ -48,57 +48,36 @@
 
 						<!-- Projects -->
 							<article id="projects">
-								<ul class="honeycomb" lang="es">
-									<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/1">
-								    		<div class="honeycomb-cell__title">Side Blotched Lizards<small>Time Series Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/2">
-								    		<div class="honeycomb-cell__title">Placeholder Project #2<small>Insert Description Here</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
-								    		<div class="honeycomb-cell__title">Placeholder Project #3<small>Insert Description Here</small></div>
-								  	
-									<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-								    		<div class="honeycomb-cell__title">Airline Safety<small>Visual Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-								    		<div class="honeycomb-cell__title">Untappd Beer Data<small>Clustering & Classification Models</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-								    		<div class="honeycomb-cell__title">How to Win Big Brother<small>Regression Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-								    		<div class="honeycomb-cell__title">Disney Film & Song Popularity<small>API data & SQL</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/3">
-								    		<div class="honeycomb-cell__title">Movie Recommender System<small>Insert description here.</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/4">
-								    		<div class="honeycomb-cell__title">US Retail Sales<small>Time Series Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/5">
-								    		<div class="honeycomb-cell__title">Wine Quality<small>Regression Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/6">
-								    		<div class="honeycomb-cell__title">Museum Artifacts<small>Visual Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell">
-								    		<img class="honeycomb-cell__image" src="https://source.unsplash.com/random/7">
-								    		<div class="honeycomb-cell__title">Dodgers Game Attendance<small>Regression Analysis</small></div>
-								  	</li>
-								  	<li class="honeycomb-cell honeycomb__placeholder"></li>
-								</ul>
+								<main class="page-content">
+									<div class="card">
+								    		<div class="content">
+								      			<h2 class="title">Mountain View</h2>
+								      			<p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
+								      			<button class="btn">View Trips</button>
+								    		</div>
+								  	</div>
+								  	<div class="card">
+								    		<div class="content">
+								      			<h2 class="title">To The Beach</h2>
+								      			<p class="copy">Plan your next beach trip with these fabulous destinations</p>
+								      			<button class="btn">View Trips</button>
+								   		</div>
+								  	</div>
+								  	<div class="card">
+								    		<div class="content">
+								      			<h2 class="title">Desert Destinations</h2>
+								      			<p class="copy">It's the desert you've always dreamed of</p>
+								      			<button class="btn">Book Now</button>
+								    		</div>
+								  	</div>
+								  	<div class="card">
+								    		<div class="content">
+								      			<h2 class="title">Explore The Galaxy</h2>
+								      			<p class="copy">Seriously, straight up, just blast off into outer space today</p>
+								      			<button class="btn">Book Now</button>
+								    		</div>
+								  	</div>
+								</main>
 							</article>
 
 						<!-- About -->
